
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int size; int end; int p; int data; } ;
typedef TYPE_1__* STREAM ;


 int errno ;
 int error (char*,int ) ;
 TYPE_1__ in ;
 int recv (int ,int,int,int ) ;
 int sock ;
 int strerror (int ) ;
 int ui_select (int ) ;

STREAM
tcp_recv(int length)
{
 int rcvd = 0;

 if (length > in.size)
 {

  in.size = length;
 }

 in.end = in.p = in.data;

 while (length > 0)
 {
  if (!ui_select(sock))

   return ((void*)0);

  rcvd = recv(sock, in.end, length, 0);
  if (rcvd == -1)
  {
   error("recv: %s", strerror(errno));
   return ((void*)0);
  }

  in.end += rcvd;
  length -= rcvd;
 }

 return &in;
}
